--- a/n8n_stt/build.yaml
+++ b/n8n_stt/build.yaml
@@ -1,7 +1,5 @@
 ---
 build_from:
-  aarch64: arm64v8/alpine:3.22.0
-  amd64: amd64/alpine:3.22.0
-  armhf: arm32v6/alpine:3.22.0
-  armv7: arm32v7/alpine:3.22.0
-  i386: i386/alpine:3.22.0
+  aarch64: ghcr.io/hassio-addons/base:18.0.2
+  amd64: ghcr.io/hassio-addons/base:18.0.2
+  armv7: ghcr.io/hassio-addons/base:18.0.2
