--- a/n8n_stt/Dockerfile
+++ b/n8n_stt/Dockerfile
@@ -8,21 +8,21 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 RUN \
     apk add --no-cache --virtual .build-dependencies \
-        docker=28.3.0-r0 \
-        json-c-dev=0.18-r0 \
-        python3-dev=3.12.4 \
+        build-base=0.5-r3 \
+        py3-pip=25.1.1-r0 \
+        python3-dev=3.12.11-r0 \
     \
     && apk add --no-cache \
-        py3-pip \
-        python3=3.12.4
+        py3-pip=25.1.1-r0 \
+        python3=3.12.11-r0 
+
+RUN pip3 install --break-system-packages --no-cache-dir wyoming==1.6.0 httpx==0.28.1
 
 
 # Copy root filesystem
 COPY rootfs /
 
 WORKDIR /app
-
-RUN pip3 install --break-system-packages --no-cache-dir wyoming==1.6.0 httpx==0.28.1
 
 
 COPY n8n_stt.py .
